- Added console logging feature from a debug option that can be enabled in the settings; - Fixed inconsistent console messages; - Fixed compilation error on GNU/Linux.

--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -92,6 +92,10 @@ $options-labels-width: 150px;
         select {
             vertical-align: middle;
             width: calc(100% - ($options-labels-width + 20px));
+
+            &[type="checkbox"] {
+                width: auto;
+            }
         }
 
         .description {
