--- a/src/sass/messageDisplayScripts.scss
+++ b/src/sass/messageDisplayScripts.scss
@@ -28,21 +28,32 @@
             }
 
             .label {
-                width: 100px;
+                padding-right: 15px;
+                width: 120px;
             }
 
             .bar-wrapper {
+                border: 1px solid gray;
+                border-radius: 5px;
+                position: relative;
                 width: 100%;
+
+                &::before {
+                    content: attr(data-value);
+                    display: block;
+                    font-weight: bold;
+                    left: 50%;
+                    position: absolute;
+                    transform: translate(-50%, -50%);
+                    top: 50%;
+                }
 
                 .bar {
                     background-color: #4CAF50;
-                    border: 1px solid #388E3C;
-                    border-radius: 5px;
                     height: 20px;
 
                     &.unsafe-value {
                         background-color: #F44336;
-                        border: 1px solid #C62828;
                     }
                 }
             }
@@ -73,7 +84,7 @@
         color: black;
         font-size: 14px;
         margin-right: 60px;
-        max-height: 40vh;
+        max-height: 50vh;
         overflow-y: auto;
         padding: 15px 35px 15px 25px;
 
