Continuation of Work Version 0.88
	•	Library updates;
	•	Removal of the html-validate library;
	•	Addition of the posthtml library and optimization of LLM HTML options;
	•	Starting Ollama integration.

--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -11,10 +11,6 @@ $options-labels-width: 150px;
         border: 2px solid red;
     }
 
-    .monospace {
-        font-family: monospace;
-    }
-
     #testResult {
         border-radius: 5px;
         left: -200%;
@@ -86,6 +82,11 @@ $options-labels-width: 150px;
             text-align: right;
             vertical-align: middle;
             width: $options-labels-width;
+
+            .monospace {
+                font-family: monospace;
+                font-size: 14px;
+            }
         }
 
         input,
@@ -137,6 +138,7 @@ $options-labels-width: 150px;
 
         body[data-provider='anthropic'] &#anthropic,
         body[data-provider='google'] &#google,
+        body[data-provider='ollama'] &#ollama,
         body[data-provider='openai'] &#openai {
             display: block;
         }
