--- a/src/html/partials/options-ollama.html
+++ b/src/html/partials/options-ollama.html
@@ -5,5 +5,6 @@
     <div class="form-group">
         <label for="ollamaModel" data-l10n-ref="options.ollama.model">&nbsp;</label>
         <select id="ollamaModel" data-required></select>
+        <button id="ollamaListModel" data-l10n-ref="options.ollama.listModelsButton">&nbsp;</button>
     </div>
 </fieldset>
