Continuation of Work Version 0.88
	•	Library updates;
	•	Progress with Ollama;
	•	Fix wrong configuration message in menu for suggest reply.

--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -111,6 +111,21 @@ $options-labels-width: 150px;
             margin-top: 5px;
             padding-left: calc($options-labels-width + 10px);
 
+            // Specific warning for a description notifying the user that the Ollama
+            // model has significant response times, making it essential to ensure
+            // an appropriate timeout.
+            &.ollama-warning-timeout {
+                display: none;
+
+                body[data-provider='ollama'] & {
+                    display: block;
+                }
+
+                strong {
+                    color: red;
+                }
+            }
+
             audio {
                 display: inline-block;
                 margin: 5px 0 5px;
