Continuation of Work Version 0.88
	•	Library updates;
	•	Progress with Ollama with the addition of error handling during configuration.

--- a/src/html/partials/options-ollama.html
+++ b/src/html/partials/options-ollama.html
@@ -6,5 +6,8 @@
         <label for="ollamaModel" data-l10n-ref="options.ollama.model">&nbsp;</label>
         <select id="ollamaModel" data-required></select>
         <button id="ollamaListModel" data-l10n-ref="options.ollama.listModelsButton">&nbsp;</button>
+
+        <div class="description ollama-error-api" data-l10n-ref="options.ollama.errorApi"></div>
+        <div class="description ollama-warning-no-model" data-l10n-ref="options.ollama.warningNoModel"></div>
     </div>
 </fieldset>
