--- a/src/html/partials/options-ollama.html
+++ b/src/html/partials/options-ollama.html
@@ -3,6 +3,10 @@
 
     <!-- https://ollama.com/library -->
     <div class="form-group">
+        <div class="full-description" data-l10n-ref="options.ollama.description"></div>
+    </div>
+
+    <div class="form-group">
         <label for="ollamaModel" data-l10n-ref="options.ollama.model">&nbsp;</label>
         <select id="ollamaModel" data-required></select>
         <button id="ollamaListModel" data-l10n-ref="options.ollama.listModelsButton">&nbsp;</button>
