--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -106,6 +106,11 @@ $options-labels-width: 150px;
             }
         }
 
+        .full-description {
+            font-size: 11px;
+            margin-top: 5px;
+        }
+
         .description {
             font-size: 11px;
             margin-top: 5px;
