Continuation of Work Version 0.88
	•	Library updates;
	•	Remove SVG close icon in favor of CSS solution;
	•	Progress with Ollama.

--- a/src/sass/_generics.scss
+++ b/src/sass/_generics.scss
@@ -9,3 +9,10 @@
     border-color: #badbcc;
     color: #0f5132;
 }
+
+.close-icon {
+    color: black;
+    cursor: pointer;
+    font-size: 18px;
+    position: absolute;
+}
