Continuation of Work Version 0.88
	•	Library updates;
	•	Ollama integration completed;
	•	Start of groq services integration.

--- a/src/html/partials/options-ollama.html
+++ b/src/html/partials/options-ollama.html
@@ -7,6 +7,12 @@
     </div>
 
     <div class="form-group">
+        <label for="ollamaServiceUrl" data-l10n-ref="options.ollama.serviceUrl">&nbsp;</label>
+        <input id="ollamaServiceUrl" type="input" placeholder="http://localhost:11434" data-required>
+        <div class="description" data-l10n-ref="options.ollama.serviceUrl.description"></div>
+    </div>
+
+    <div class="form-group">
         <label for="ollamaModel" data-l10n-ref="options.ollama.model">&nbsp;</label>
         <select id="ollamaModel" data-required></select>
         <button id="ollamaListModel" data-l10n-ref="options.ollama.listModelsButton">&nbsp;</button>
