Continuation of Work Version 0.88
	•	Library updates;
	•	Fix the error message displayed in Ollama API calls;
	•	A more precise definition of Groq’s cloud services.

--- a/src/html/partials/options-groq.html
+++ b/src/html/partials/options-groq.html
@@ -1,5 +1,5 @@
 <fieldset id="groq">
-    <legend>Groq:</legend>
+    <legend>Groq cloud:</legend>
 
     <div class="form-group">
         <label for="groqApiKey" data-l10n-ref="options.groq.apiKey">&nbsp;</label>
