Continuation of Work Version 0.8
	•	Library updates;
	•	Fix for temperature parameter handling in Google Gemini.
	•	Removal of the Google Gemini 1.0 Pro model, now deprecated and scheduled for removal on February 15, 2025;
	•	Start of integration with xAI Grok;
	•	README.md update.

--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -207,7 +207,8 @@ $options-labels-width: 150px;
         body[data-provider='google'] &#google,
         body[data-provider='groq'] &#groq,
         body[data-provider='ollama'] &#ollama,
-        body[data-provider='openai'] &#openai {
+        body[data-provider='openai'] &#openai,
+        body[data-provider='xai'] &#xai {
             display: block;
         }
     }
