--- a/src/html/partials/options-google-gemini.html
+++ b/src/html/partials/options-google-gemini.html
@@ -11,8 +11,9 @@
     <div class="form-group">
         <label for="googleModel" data-l10n-ref="options.google.model">&nbsp;</label>
         <select id="googleModel" data-required>
-            <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
             <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
+            <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
+            <option value="gemini-1.5-flash-8b">Gemini 1.5 Flash-8B</option>
         </select>
     </div>
 </fieldset>
