Continuation of Work Version 90
	•	Library updates;
	•	Added password toggle web component for API keys.

--- a/src/html/partials/options-google-gemini.html
+++ b/src/html/partials/options-google-gemini.html
@@ -3,7 +3,7 @@
 
     <div class="form-group">
         <label for="googleApiKey" data-l10n-ref="options.google.apiKey">&nbsp;</label>
-        <input id="googleApiKey" type="password" data-required>
+        <input id="googleApiKey" is="password-toggle" data-required>
         <div class="description" data-l10n-ref="options.google.apiKey.description"></div>
     </div>
 
