--- a/src/html/partials/options-openai-gpt.html
+++ b/src/html/partials/options-openai-gpt.html
@@ -3,7 +3,7 @@
 
     <div class="form-group">
         <label for="openaiApiKey" data-l10n-ref="options.openai.apiKey">&nbsp;</label>
-        <input id="openaiApiKey" type="password" data-required>
+        <input id="openaiApiKey" is="password-toggle" data-required>
         <div class="description" data-l10n-ref="options.openai.apiKey.description"></div>
     </div>
 
