--- a/src/html/partials/options-groq.html
+++ b/src/html/partials/options-groq.html
@@ -3,7 +3,7 @@
 
     <div class="form-group">
         <label for="groqApiKey" data-l10n-ref="options.groq.apiKey">&nbsp;</label>
-        <input id="groqApiKey" type="password" data-required>
+        <input id="groqApiKey" is="password-toggle" data-required>
         <div class="description" data-l10n-ref="options.groq.apiKey.description"></div>
     </div>
 
