--- a/src/html/partials/options-xai-grok.html
+++ b/src/html/partials/options-xai-grok.html
@@ -3,7 +3,7 @@
 
     <div class="form-group">
         <label for="xaiApiKey" data-l10n-ref="options.xai.apiKey">&nbsp;</label>
-        <input id="xaiApiKey" type="password" data-required>
+        <input id="xaiApiKey" is="password-toggle" data-required>
         <div class="description" data-l10n-ref="options.xai.apiKey.description"></div>
     </div>
 </fieldset>
