Continuation of Work Version 90
	•	Fix look and feel web component on GNU/Linux.

--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -123,7 +123,7 @@ $options-labels-width: 150px;
                 cursor: pointer;
                 font-size: 12px;
                 position: absolute;
-                right: 0;
+                right: 3px;
                 top: 3px;
                 z-index: 10;
             }
