Continuation of Work Version 90
	•	Library updates;
	•	Update localizations;
	•	Add new voice for OpenAI text to speech.

--- a/src/html/partials/options-openai-gpt.html
+++ b/src/html/partials/options-openai-gpt.html
@@ -41,10 +41,13 @@
             <label for="openaiText2SpeechVoice" data-l10n-ref="options.openai.text2speech.voice">&nbsp;</label>
             <select id="openaiText2SpeechVoice" data-required>
                 <option value="alloy">Alloy</option>
+                <option value="ash">Ash</option>
+                <option value="coral">Coral</option>
                 <option value="echo">Echo</option>
                 <option value="fable">Fable</option>
                 <option selected value="onyx">Onyx</option>
                 <option value="nova">Nova</option>
+                <option value="sage">Sage</option>
                 <option value="shimmer">Shimmer</option>
             </select>
 
