Continuation of Work Version 91
	•	Library updates;
	•	Minor changes to comments;
	•	Completion of Mistral AI implementation.

--- a/src/sass/messageDisplayScripts.scss
+++ b/src/sass/messageDisplayScripts.scss
@@ -30,6 +30,7 @@
             }
 
             .label {
+                font-size: 12px;
                 padding-right: 15px;
                 width: 120px;
             }
@@ -98,7 +99,7 @@
     }
 
     .close-icon {
-        right: 65px;
+        right: 80px;
         top: 0;
     }
 }
