--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -242,6 +242,7 @@ $options-labels-width: 150px;
         body[data-provider='google'] &#google,
         body[data-provider='groq'] &#groq,
         body[data-provider='lms'] &#lms,
+        body[data-provider='mistral'] &#mistral,
         body[data-provider='ollama'] &#ollama,
         body[data-provider='openai'] &#openai,
         body[data-provider='xai'] &#xai {
