Continuation of Work Version 91
	•	Library updates;
	•	Update of Claude models with the final version of Claude 3.7 Sonnet;
	•	Update of Gemini models with the final version of 2.0 Flash Lite.

--- a/src/html/partials/options-google-gemini.html
+++ b/src/html/partials/options-google-gemini.html
@@ -12,8 +12,8 @@
         <label for="googleModel" data-l10n-ref="options.google.model">&nbsp;</label>
         <select id="googleModel" data-required>
             <option value="gemini-2.0-pro-exp-02-05">Gemini 2.0 Pro (Experimental)</option>
-            <option value="gemini-2.0-flash-lite-preview-02-05">Gemini 2.0 Flash Lite (Preview)</option>
             <option value="gemini-2.0-flash">Gemini 2.0 Flash</option>
+            <option value="gemini-2.0-flash-lite">Gemini 2.0 Flash Lite</option>
             <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
             <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
             <option value="gemini-1.5-flash-8b">Gemini 1.5 Flash-8B</option>
