Continuation of Work Version 91
	•	Library updates;
	•

--- a/src/html/partials/options-openai-gpt.html
+++ b/src/html/partials/options-openai-gpt.html
@@ -32,8 +32,9 @@
         <div class="form-group">
             <label for="openaiText2SpeechAudioQuality" data-l10n-ref="options.openai.text2speech.audioQuality">&nbsp;</label>
             <select id="openaiText2SpeechAudioQuality" data-required>
-                <option selected value="tts-1" data-l10n-ref="options.openai.text2speech.audioQuality.tts1"></option>
+                <option value="gpt-4o-mini-tts" data-l10n-ref="options.openai.text2speech.audioQuality.ttsgpt4omini"></option>
                 <option value="tts-1-hd" data-l10n-ref="options.openai.text2speech.audioQuality.tts1hd"></option>
+                <option selected value="tts-1" data-l10n-ref="options.openai.text2speech.audioQuality.tts1"></option>
             </select>
         </div>
 
