--- a/src/sass/options.scss
+++ b/src/sass/options.scss
@@ -196,7 +196,6 @@ $options-labels-width: 150px;
             &.local-llm-warning-timeout {
                 display: none;
 
-                body[data-provider='lms'] &,
                 body[data-provider='ollama'] & {
                     display: block;
                 }
@@ -242,15 +241,7 @@ $options-labels-width: 150px;
             padding: 10px 0 0 0;
         }
 
-        body[data-provider='anthropic'] &#anthropic,
-        body[data-provider='deepseek'] &#deepseek,
-        body[data-provider='google'] &#google,
-        body[data-provider='groq'] &#groq,
-        body[data-provider='lms'] &#lms,
-        body[data-provider='mistral'] &#mistral,
-        body[data-provider='ollama'] &#ollama,
-        body[data-provider='openai'] &#openai,
-        body[data-provider='xai'] &#xai {
+        body[data-provider='ollama'] &#ollama {
             display: block;
         }
     }
